# retina

./: .gitignore  .travis.yml  README.md  development_guidelines.md  inversepowerlookuptable.csv  linux_lcm-gen_py.sh  pom.xml
doc/: Go-kart Hardware.md  GoKart Hardware  GoKart Hardware.md  autobox_testing.md  development_guidelines.md  dubilab_guidelines.md  eclipsepref.epf  gokart_hardware.md  gokart_messages.md  gokart_software_setup.md  ifconfig.md  modules.md  reports.md
lcmtypes/: idsc.lcm
resources/: .gitignore  track20190325.csv
resources/lcmtypes/: idsc.lcm
resources/properties/: ChassisGeometry.properties  ComputerConfig.properties  HighPowerSteerConfig.properties  JoystickConfig.properties  LinmotConfig.properties  LocalizationConfig.properties  MPCActiveCompensationLearningConfig.properties  MPCOptimizationConfig.properties  MappingConfig.properties  PlanSRConfig.properties  PursuitConfig.properties  RimoConfig.properties  SafetyConfig.properties  SensorsConfig.properties  SteerConfig.properties  TorqueConfig.properties  TorqueVectoringConfig.properties  TrajectoryConfig.properties  VelocityEstimationConfig.properties
resources/scripts/: linux_lcm-gen.sh  linux_lcm-gen_py.sh  run_lcm-hdl32e.sh  run_lcm-spy.sh
scripts/: linux_lcm-gen.sh
src/test/: .gitignore
src_MATLAB/MPCGokart/: KinematicTrajectoryTracking.m  bspline.m  bspline.m~  bsplineDerivationPlot.m  cartbspline.m  convertM.m  draw.m  drawFullM.m  euler.m  forcestest.m  fullmodelsimulator.m  fullmodelsimulator.m~  fullstatemodel.m  getControl.m  getTrajectory.m  getTrajectory.m~  getuserdir.m  kinematicOde.m  kinematic_tracking.cpp  kinematic_tracking_data_acadodata_M1.txt  kinematic_tracking_data_acadodata_M2.txt  nativeexecutionLCM.c  proceed.m  simple2bas.m  simpleDerTest.m  smoothfullmodelsimulator.m  splinetest.m  splinetest.m~  splinetest2.m  statemodeltest.m  vecnorm.m
src_MATLAB/cameraCalibration/: BackTransformation.m  BackTransformationVerticalImage.m  ForwardTransformation.m  gokartToImage.m  imageToGokart.m  transformToHorizontal.m
src_MATLAB/goKartId/: estimate.m  estimateJ.m  estimateJ_pos.m  findTimeIntervals.m  findZeroCrossings.m  testEstimation.m  testModel.slx  tuning.m
src_MATLAB/hokuyo/: .gitignore  isdigit.m  parser.m  read_sensor.m  read_sensor.sh
src_c/benchmark/: benchmark.c
src_c/hokuyo/: CMakeLists.txt  urg_provider.c
src_c/hokuyo/include/: open_urg_sensor.h
src_c/hokuyo/src/: open_urg_sensor.c  urg_binaryprovider.c  urg_provider.c  urg_timedprovider.c
src_cpp/: .gitignore
src_cpp/EKF/: CMakeLists.txt  install.md  main.cpp
src_cpp/EKF/src/: ExtendedKalmanFilter.h  Jacobis.cpp  Jacobis.h  TestPacejkaEKF.cpp  TestPacejkaEKF.h  WriterEKF.cpp  WriterEKF.h  main.cpp
src_cpp/EKF/src/InputOutput/: ReaderCSV.cpp  ReaderCSV.h  WriterEKF.h
src_cpp/EKF/src/Test/: TestPacejkaEKF.cpp  TestPacejkaEKF.h
src_cpp/UKF/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  TestPacejkaUKF.cpp  TestPacejkaUKF.h  TestUKF.cpp  TestUKF.h  UKF.cbp  UnscentedKalmanFilter.h  cmake_install.cmake  install.md  main.cpp  paramsUKF.csv
src_cpp/UKF/src/: TestPacejkaUKF.cpp  TestPacejkaUKF.h  TestUKF.cpp  TestUKF.h  UnscentedKalmanFilter.h  WriterUKF.h  main.cpp  main.h
src_cpp/UKF/src/InputOutput/: ReaderCSV.cpp  WriterUKF.cpp  WriterUKF.h
src_cpp/UKF/src/LCM/: CompileMpcClient.sh  ModelObject.cpp  definitions.c  mpcClient.cpp  mpcClient.h  static_sender.cpp  static_sender.h  static_sender_compile.sh
src_cpp/UKF/src/ModelMPC/: LogTester.cpp  LogTester.h  ModelMPC.cpp  ModelMPC.h  StaticTester.cpp  StaticTester.h  modelDx.cpp  modelDx.h
src_cpp/UKF/src/ModelSimple/: Model_first.cpp  Model_first.h
src_cpp/UKF/src/PacejkaUKF/: PacejkaUKFinterface.cpp  PacejkaUKFinterface.h
src_cpp/UKF/src/Test/: TestPacejkaUKF.cpp  TestPacejkaUKF.h  TestUKF.cpp  TestUKF.h
src_cpp/UKF/src/TestUKF/: TestPacejkaUKF.cpp  TestPacejkaUKF.h  TestUKF.cpp  TestUKF.h
src_py/: .gitignore
(+5604 files in other folders)
